--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 .column1 {
-  border: 2px solid green;
+  border: 10px solid rgb(255, 255, 255);
   padding: 15px;
   background-color: green;
   display: block;
@@ -19,22 +19,25 @@
   box-sizing: border-box;
   float: left;
   color: rgb(0, 0, 0);
+  border-radius: 8px;
 }
 
   .column2 {
-  border: 2px solid red;
+  border: 10px solid rgb(255, 255, 255);
   padding: 15px;
   background-color: red;
   display: block;
   margin: auto;
   width: 40%;
   box-sizing: border-box;
-  float: left;
+  float: right;
   color: rgb(0, 0, 0);
+  border-radius: 8px;
 }
 
   .column3 {
-  border: 2px solid blue;
+  border: 10px solid rgb(255, 255, 255);
+  border-radius: 8px;
   padding: 15px;
   background-color: blue;
   display: block;
@@ -43,6 +46,7 @@
   box-sizing: border-box;
   float: left;
   color: black;
+  
 }
 span {
   margin-left: 45%;
